unpackaged/main/default/objects/PictogrammesClassification__c/PictogrammesClassification__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Pictogrammes Classification</label>
</CustomObject>