unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_G__c.field-meta.xml
<CustomField>
    <fullName>Classification_G__c</fullName>
    <label>Classification_G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>