unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_I__c.field-meta.xml
<CustomField>
    <fullName>Classification_I__c</fullName>
    <label>Classification_I</label>
    <length>255</length>
    <type>Text</type>
</CustomField>