unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_K3__c.field-meta.xml
<CustomField>
    <fullName>Classification_K3__c</fullName>
    <label>Classification_K3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>