unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_K__c.field-meta.xml
<CustomField>
    <fullName>Classification_K__c</fullName>
    <label>Classification_K</label>
    <length>255</length>
    <type>Text</type>
</CustomField>