unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_M__c.field-meta.xml
<CustomField>
    <fullName>Classification_M__c</fullName>
    <label>Classification_M</label>
    <length>255</length>
    <type>Text</type>
</CustomField>