unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_M_Produit__c.field-meta.xml
<CustomField>
    <fullName>Classification_M_Produit__c</fullName>
    <label>Classification_M_Produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>