unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_P__c.field-meta.xml
<CustomField>
    <fullName>Classification_P__c</fullName>
    <label>Classification_P</label>
    <length>255</length>
    <type>Text</type>
</CustomField>