unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_R__c.field-meta.xml
<CustomField>
    <fullName>Classification_R__c</fullName>
    <label>Classification_R</label>
    <length>255</length>
    <type>Text</type>
</CustomField>