unpackaged/main/default/objects/PictogrammesClassification__c/fields/Classification_S__c.field-meta.xml
<CustomField>
    <fullName>Classification_S__c</fullName>
    <label>Classification_S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>