unpackaged/main/default/objects/PictogrammesClassification__c/fields/Icon_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Icon_confirmation__c</fullName>
    <label>Icon_confirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>